--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "devDependencies": {
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0"
+  },
+  "dependencies": {
+    "uuid": "^8.3.2"
   }
 }
